--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "node-uuid": "1.4.x",
     "passport": "0.2.x",
     "passport-facebook": "1.0.3",
+    "passport-twitter": "1.0.2",
     "connect": "2.19.2"
   },
   "devDependencies": {},
