--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "passport": "0.2.x",
     "passport-facebook": "1.0.3",
     "passport-twitter": "1.0.2",
+    "passport-google": "0.3.0",
     "connect": "2.19.2"
   },
   "devDependencies": {},
