--- a/public/contact/character.vwf.yaml
+++ b/public/contact/character.vwf.yaml
@@ -14,7 +14,7 @@
 
 extends: asset.vwf
 properties:
-  translation:
+  translation: [50,50,50]
   rotZ: 0
   oldRotZ: 0         
   test:  
@@ -59,6 +59,7 @@ scripts:
         this.Scene.bind('keyDown', this.kd);
         this.Scene.bind('keyUp' , this.ku);
         this.Scene.avatarCreated(this);
+        this.transformAPI.setPosition(1+vwf.random(vwf.application()) * 8 - 5,125+vwf.random(vwf.application()) * 8 - 5,40+vwf.random(vwf.application()) * 8 - 5);
     }
     this.initialize = function(){
 
@@ -435,7 +436,7 @@ scripts:
        {
             var world = vwf.getProperty(this.standingOnID,'worldTransform');
             //world = MATH.addVec3([world[12],world[13],world[14]],this.standingOnOffset.internal_val);
-            //this.transformAPI.setPosition([world[0],world[1],world[2]]);
+            //this.transformAPI.setPosition([world[0],world[1],world[2]]);this.transformAPI.setPosition([world[0],world[1],world[2]]);
             var offset = Mat4.multMat(world,this.standingOnOffset.internal_val,[]);
             this.transform = offset;
             //this.originalvelocity = [0,0,0];
