Fix for oneClick and new bringMeHome behavior

--- a/public/contact/oneClick.vwf.yaml
+++ b/public/contact/oneClick.vwf.yaml
@@ -52,7 +52,7 @@ properties:
 methods:
   initialize: "   "
   bringPlayerToMe: |
-    var player =  _UserManager.GetAvatarForClientID(this.client)
+    var player =  _UserManager.GetAvatarForClientID(this.client);
     var worldpos = this.transformAPI.getWorldPosition();
     var _offset = this.Offset.internal_val.slice();
     //console.log(_offset);
